# RE-Library

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  astro.config.mjs  package.json
.github/ISSUE_TEMPLATE/: 01-new-entry.md  02-update-entry.md  03-correction.md  04-site-or-mcp-bug.md  05-question.md  config.yml
.github/workflows/: ci.yml  deploy-pages.yml  python-publish.yml
content/: .placeholder
content/android/: 01-apk-structure.md
content/anti-analysis/: 01-anti-debug.md  02-vm-bytecode-interpreter.md  05-launcher-activation-fingerprinting.md  06-unity-il2cpp-triage.md  07-vm-bytecode-proprietary.md
content/drm/: 01-cdm-architecture.md  02-publisher-internal-telemetry-relay.md
content/engines/: 01-blackspace-engine.md  02-glacier-2.md  03-unity-il2cpp.md  04-unreal-engine-5.md
content/ios/: 01-ipa-structure.md
content/native/: 01-elf-format.md  02-pe-section-layout.md
content/packers/: 01-upx.md
content/protection/: 01-encrypted-vm-bytecode-interpreter.md  02-encrypted-vm-bytecode-interpreter-dw.md  03-encrypted-vm-bytecode-interpreter-vmt.md  04-proprietary-vm-dispatch.md  05-anti-debug.md  06-hardware-fingerprinting.md  07-telemetry-leaks.md
content/re-ai-mcp/: 01-re-ai-plugin.md  02-re-rizin.md  03-re-lief.md  04-re-capa.md  05-re-triton.md  06-re-winedbg.md  07-re-dotnet.md
mcp-server/: README.md  pyproject.toml
mcp-server/src/re_library_mcp/: __init__.py  __main__.py  _denylist.py  loader.py  schema.py  search.py  server.py  tools.py
mcp-server/tests/: __init__.py  conftest.py  test_loader.py  test_no_drm_names.py  test_schema_sync.py  test_search.py  test_tools.py
src/: content.config.ts
(+18 files in other folders)
