[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "re-library-mcp"
version = "0.1.0"
description = "MCP server for the RE-Library knowledge base — search and retrieve Reverse Engineering entries from any MCP-compatible client."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "RE-Library contributors" },
]
keywords = [
  "reverse-engineering",
  "mcp",
  "model-context-protocol",
  "security",
  "android",
  "ios",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Disassemblers",
]
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.5.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "mcp[cli]>=1.0.0",
]

[project.scripts]
re-library-mcp = "re_library_mcp.server:main"

[project.urls]
Homepage = "https://heretek-ai.github.io/RE-Library/"
Repository = "https://github.com/Heretek-AI/RE-Library"
Issues = "https://github.com/Heretek-AI/RE-Library/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/re_library_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
